# mnemokit

./: .coverage  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mnemokit/: __init__.py  store.py
tests/: test_store.py
